...
                            
                            phoneNumber = String(phoneNumber.prefix(characterLimit))
                            isPhoneNumberValid = true
                            
                        }
                        
                    }.accessibilityIdentifier("enterMobileNumber")
                    
                    if showError  {
                        Text("Invalid mobile number")
                            .foregroundColor(.red)
                            .padding()
                    } else if !isPhoneNumberValid  {
                        Text("Mobile number should be 10 digits")
                            .foregroundColor(.red)
                            .padding()
                    }
                    
                    Button("Login") {
                        if isValidPhoneNumber(phoneNumber) {
                            isShowingNextScreen = true
                            // Perform login logic
                            print("Login successful")
                        } else {
                            if phoneNumber.count != 10 {
...
