//
//  MoviesSampleAppUITests.swift
//  MoviesSampleAppUITests
//
//  Created by Sunil Kumar on 09/02/24.
//

import XCTest

final class MoviesSampleAppUITests: XCTestCase {
    private var app:XCUIApplication!
    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        app = XCUIApplication()
        app.launch()
        
        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        app = nil
    }
    
    func testLoginButtonSuccessCase() {
        let mobileNumberTextField = app.textFields["enterMobileNumber"]
        XCTAssertTrue(mobileNumberTextField.exists)
        mobileNumberTextField.tap()
        mobileNumberTextField.typeText("8904104841")
        XCTAssertTrue(mobileNumberTextField.waitForExistence(timeout: 5), "There mobileNumberTextField should be visible on the screen")
        let returnButton = app.buttons["Return"]
        XCTAssertTrue(returnButton.waitForExistence(timeout: 5), "There return button should be visible on the screen")
        returnButton.tap()
        let LoginBtn = app.buttons["Login"]
        XCTAssertTrue(LoginBtn.waitForExistence(timeout: 5), "There Login button should be visible on the screen")
        LoginBtn.tap()
       
       
        
    }
    
    func testLoginButtonFailureCase() {
        let mobileNumberTextField = app.textFields["enterMobileNumber"]
        XCTAssertTrue(mobileNumberTextField.exists)
        mobileNumberTextField.tap()
        mobileNumberTextField.typeText("89041048")
        XCTAssertTrue(mobileNumberTextField.waitForExistence(timeout: 5), "There mobileNumberTextField should be visible on the screen")
        let returnButton = app.buttons["Return"]
        XCTAssertTrue(returnButton.waitForExistence(timeout: 5), "There return button should be visible on the screen")
        returnButton.tap()
        let LoginBtn = app.buttons["Login"]
        XCTAssertTrue(LoginBtn.waitForExistence(timeout: 5), "There Login button should be visible on the screen")
        LoginBtn.tap()
        
        
    }
    
    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()
        
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    
    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
